test/neg/neg-global_ptr1.errc
global_ptr<T> does not support volatile qualification on T
